// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render normally 1`] = `
<Text
  numberOfLines={1}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#838387",
        "flexShrink": 1,
        "fontFamily": "System",
        "fontSize": 16,
        "fontWeight": "400",
        "height": 16,
        "includeFontPadding": false,
        "lineHeight": 16,
        "marginRight": 20,
        "textAlignVertical": "center",
      },
      undefined,
    ]
  }
>
  label
</Text>
`;

exports[`should render with custom styles 1`] = `
<Text
  numberOfLines={1}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#838387",
        "flexShrink": 1,
        "fontFamily": "System",
        "fontSize": 16,
        "fontWeight": "400",
        "height": 16,
        "includeFontPadding": false,
        "lineHeight": 16,
        "marginRight": 20,
        "textAlignVertical": "center",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  label
</Text>
`;
